added reboot for when the IP is dynamic

--- a/roles/bastion2/tasks/main.yml
+++ b/roles/bastion2/tasks/main.yml
@@ -79,3 +79,12 @@
     --noautoconsole"
   with_items:
     - "{{  nodes.bastion2  }}"
+
+# This is dirty but allows the restart of VMs after initialization - change time to fit your network speed
+- name: Wait for 160 sec
+  wait_for:
+    delay: 160
+    timeout: 0
+
+- name: reboot VM
+  command: "virsh reboot --domain bastion2"
